--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
     "date-fns": "^2.29.1",
     "google-map-react": "^2.2.0",
     "leaflet": "^1.8.0",
@@ -24,6 +25,7 @@
     "react-leaflet": "^4.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
     "recharts": "^2.1.13",
     "web-vitals": "^2.1.4"
   },
