--- a/public/appointmentData.json
+++ b/public/appointmentData.json
@@ -13,5 +13,10 @@
         "name": "Shahriar Ariyan",
         "fee": "700",
         "time": "1:00 PM- 4:00 PM"
+    },
+    {
+        "name": "Dr.SPR",
+        "fee": "700",
+        "time": "1:00 PM- 4:00 PM"
     }
 ]
