--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.10.3",
     "@mui/styled-engine-sc": "^5.10.1",
     "@mui/x-date-pickers": "^5.0.0-beta.3",
+    "@tanstack/react-query": "^4.29.15",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
